@@ -1377,36 +1377,13 @@ operator|.
 name|build
 argument_list|()
 decl_stmt|;
-name|FileSystem
+name|DistributedFileSystem
 name|fs
 init|=
 name|cluster
 operator|.
 name|getFileSystem
 argument_list|()
-decl_stmt|;
-name|assertTrue
-argument_list|(
-literal|"Not a HDFS: "
-operator|+
-name|fs
-operator|.
-name|getUri
-argument_list|()
-argument_list|,
-name|fs
-operator|instanceof
-name|DistributedFileSystem
-argument_list|)
-expr_stmt|;
-specifier|final
-name|DistributedFileSystem
-name|dfs
-init|=
-operator|(
-name|DistributedFileSystem
-operator|)
-name|fs
 decl_stmt|;
 name|PrintStream
 name|psBackup
@@ -1642,20 +1619,6 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
-try|try
-block|{
-name|dfs
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{}
 name|System
 operator|.
 name|setOut
