@@ -692,6 +692,9 @@ Release 2.4.0 - UNRELEASED
     HDFS-6057. DomainSocketWatcher.watcherThread should be marked as daemon
     thread (cmccabe)
 
+    HDFS-6058. Fix TestHDFSCLI failures after HADOOP-8691 change.
+    (Akira Ajisaka via wheat9)
+
   BREAKDOWN OF HDFS-5698 SUBTASKS AND RELATED JIRAS
 
     HDFS-5717. Save FSImage header in protobuf. (Haohui Mai via jing9)
